# Talentys-OSS-Data-Platform

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDENTIALS_STANDARDS.md  I18N_REORGANIZATION_REPORT_20251015_234258.json  LICENSE  MULTILINGUAL_FIX_PLAN.md  Makefile  OPENSOURCE_CLEANUP_CHECKLIST.md  OPENSOURCE_PREPARATION_FINAL.md  OPENSOURCE_READY.md  ORCHESTRATOR_TRANSLATION.md  PLATFORM_STATUS.md  PORTS_MAPPING.md  QUICK_START.md  README.md  README_v3.0_backup.md  RELEASE_GUIDE_v1.1.md  SECURITY.md  SECURITY_SSH_KEY_CHECK.md  cleanup_opensource.ps1  cleanup_opensource_simple.ps1  config.env  deploy.ps1  deploy.sh  deploy_all.ps1  deploy_dremio_connector.py  deploy_platform.py  docker-compose-ai.yml  docker-compose-airbyte-stable.yml  docker-compose-airbyte.yml  docker-compose-minimal.yml  docker-compose-openmetadata-official.yml  docker-compose-openmetadata-standalone.yml  docker-compose-superset.yml  docker-compose.yml  example_pipeline.py  (+21 more)
ai-services/chat-ui/: DESIGN_GOOGLE_STYLE.md  Dockerfile  ERGONOMIC_FIXES.md  LOGO_FIX.md  LOGO_MONOCHROME.md  LOGO_SIDEBAR_FIX.md  README-ADMIN.md  SETUP-COMPLETE.md  admin.py  app.py  launch-talentys-agent.ps1  requirements-admin.txt  requirements.txt
ai-services/embedding/: Dockerfile  app.py  requirements.txt
ai-services/rag-api/: Dockerfile  app.py  requirements.txt
assets/: README.md
assets/screenshots/: .gitkeep  CAPTURE_GUIDE.md  PLATFORM_SCREENSHOTS_GUIDE.md  README.md  VISUAL_EXAMPLES_REFERENCE.md
config/: dremio.conf
config/i18n/: config.json  data_generator.py
config/mysql/: my.cnf
dbt/: .user.yml  README.md  dbt_project.yml
dbt/tests/: test_phase3_country_consistency.sql  test_phase3_coverage_rate_range.sql  test_phase3_email_consistency.sql  test_phase3_status_logic.sql  test_phase3_total_consistency.sql
docker/: docker-compose.yml
docs/: DEMO_GUIDE.md  QUICKSTART.md  README.md
docs/api/: README.md
docs/architecture/: README.md
docs/development/: README.md
docs/diagrams/: airbyte-workflow.mmd  architecture-with-airbyte.mmd  architecture.mmd  data-flow.mmd  deployment.mmd  user-journey.mmd
docs/guides/: FIX_ELASTICSEARCH_DREMIO.md  GUIDE_CONFIGURATION_MINIO.md  GUIDE_ELASTICSEARCH_DREMIO.md  GUIDE_VISUALISATION_LINEAGE.md  MANUEL_CONFIGURATION.md  QUICKSTART.md  QUICKSTART_WSL.md  TECHNICAL_DOCUMENTATION.md  WSL_GUIDE.md
dremio/: SETUP_GUIDE.md
opendata/: DASHBOARD_GUIDE.md  README.md  dashboard.html  phase3_details.json  phase3_metrics.json  phase3_opendata.json
openmetadata/: QUICKSTART.md
scripts/: README.md  README_I18N_SCRIPTS.md  add_dremio_to_superset.py  auto-sync-dremio-openmetadata.py  automate_phase1.sh  build_complete_ecosystem.py  check-doc-links.ps1  check-dremio-resources.py  check-lineage.py  check-links-simple.ps1  check-ssh-security.ps1  check_dremio_sources.py  check_es.py  check_es_dremio_fields.py  check_es_structure.py  check_minio.py  check_minio_catalog.py  check_schema.py  check_sources.py  clean_pg.py  configure_es_in_dremio_advanced.py  configure_openmetadata_airbyte.py  configure_opensearch_in_dremio.py  connect_elasticsearch_to_dremio.ps1  copy-fr-content-with-warning.ps1  count_pg.py  create-openmetadata-service.py  create-source-data.py  create-vds-sources.py  create_all_sources_v3.py  create_all_vds.py  create_complete_vds.py  create_dremio_dashboard.py  create_elasticsearch_source.py  create_es_vds.py  create_es_vds_direct_sql.py  create_es_vds_dremio26.py  create_es_vds_fixed.py  create_minio_source.py  create_minio_source_v2.py  (+107 more)
(+444 files in other folders)
